# qxmpp-mix-test

./: CMakeLists.txt  main.cpp
